--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ html {
 }
 
 .item {
-    width: 40px;
+    width: 25%;
     height: 80%;
     position: absolute;
     left: 60px;
@@ -66,7 +66,7 @@ html {
 }
 
 .item2 {
-    width: 40px;
+    width: 25%;
     height: 80%;
     position: absolute;
     left: 115px;
