--- a/var.css
+++ b/var.css
@@ -1,5 +1,7 @@
 :root {
     --main-color: #5497A7;
-    --text-color: #EAEAEA;
+    --text-color: #F4F4F9;
     --secondary-text-color: #191102;
+    --background-night: #252526;
+    --background-day: #F4F4F9;
 }
