--- a/style.css
+++ b/style.css
@@ -29,18 +29,35 @@ body {
 }
 
 .colorMode {
-    background-image: url('daymode.png');
-    background-position: -4px;
+    background-image: url('daymodeicon.png');
     background-size: cover;
-    width: 165px;
+    width: 70px;
     height: 70px;
     position: relative;
-    left: 10px;
-    transition: all 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out,
+        background-image 0.0s ease-in-out 0.38s;
 }
 
 .colorMode:hover {
     cursor: pointer;
+    width: 165px;
+    transition: width 0.4s ease-in-out;
+}
+
+.colorMode.day {
+    background-image: url("daymodeicon.png");
+}
+
+.colorMode.night {
+    background-image: url("nightmodeicon.png");
+}
+
+.colorMode.day:hover {
+    background-image: url("daymode.png");
+}
+
+.colorMode.night:hover {
+    background-image: url("nightmode.png");
 }
 
 .menu {
@@ -153,9 +170,24 @@ option {
     transition: all 0.4s ease-in-out;
 }
 
+.swap {
+    width: 50px;
+    height: 50px;
+    background-image: url('swapday.png');
+    background-size: cover;
+    margin-top: 50px;
+    transition: all 0.4s ease-in-out;
+}
+
+.swap:hover {
+    cursor: pointer;
+    transform: rotate(180deg);
+}
+
 .result {
     font-size: 1.3rem;
     margin-top: 50px;
+    transition: all 0.4s ease-in-out;
 }
 
 .modification {
@@ -188,6 +220,7 @@ option {
 
 .addUnit p {
     margin-bottom: 10px;
+    transition: all 0.4s ease-in-out;
 }
 
 .addUnit p:first-child {
