--- a/style.css
+++ b/style.css
@@ -2,8 +2,21 @@ html {
     width: 100%;
 }
 
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #bbbbbb;
+    border-radius: 50px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: #919191;
+}
+
 body {
-    max-height: 500px;
+    max-height: 750px;
     transition: all 0.4s ease-in-out;
 }
 
@@ -146,7 +159,6 @@ body {
     flex-direction: column;
     padding-left: 1em;
     padding-right: 1em;
-
 }
 
 .alignRow {
@@ -203,6 +215,7 @@ option {
     width: 70%;
     height: 500px;
     border-radius: 20px;
+    position: relative;
     margin-left: auto;
     margin-right: auto;
     margin-top: 100px;
@@ -211,6 +224,7 @@ option {
     display: none;
     justify-content: center;
     align-items: center;
+    transition: all 0.4s ease-in-out;
 }
 
 .divInter {
@@ -229,7 +243,6 @@ option {
 
 .addUnit p {
     margin-bottom: 10px;
-    transition: all 0.4s ease-in-out;
 }
 
 .addUnit p:first-child {
@@ -298,13 +311,13 @@ option {
 }
 
 div.historique {
-    width: 50px;
+    width: calc(7.45% + 8px);
     height: 75px;
     position: relative;
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
     top: -588px;
-    left: 97.8%;
+    left: 92.55%;
     overflow: auto;
     background-color: var(--main-color);
     transition: all 0.4s ease-in-out;
@@ -315,6 +328,7 @@ div.historique p {
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 15px;
     text-align: center;
     font-weight: bolder;
 }
@@ -335,15 +349,144 @@ ul.historique li {
     font-size: 1.05rem;
     text-align: center;
     width: 100%;
+    margin-bottom: 5px;
+}
+
+@media screen and (max-width: 1100px) {
+    .convertisseur {
+        width: 75%;
+    }
+
+    .modification {
+        width: 75%;
+    }
+
+    .selector {
+        width: 175px;
+    }
+
+    .value {
+        width: 170px;
+    }
+
+    div.historique p {
+        font-size: 1.1rem;
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .title {
+        font-size: 2.5rem;
+    }
+
+    .convertisseur {
+        width: 80%;
+    }
+
+    .modification {
+        width: 80%;
+    }
+
+    .selector {
+        width: 150px;
+    }
+
+    .value {
+        width: 145px;
+    }
+
+    .swap {
+        width: 40px;
+        height: 40px;
+    }
+
+    div.historique {
+        width: 75px;
+    }
+
+    div.historique p {
+        font-size: 0.9rem;
+    }
+}
+
+@media screen and (max-width: 750px) {
+    .title {
+        font-size: 2.3rem;
+    }
+
+    .convertisseur {
+        width: 85%;
+    }
+
+    .modification {
+        width: 85%;
+    }
+
+    .selector {
+        width: 125px;
+    }
+
+    .value {
+        width: 120px;
+    }
+
+    .swap {
+        width: 30px;
+        height: 30px;
+    }
+
+    div.historique {
+        width: 60px;
+    }
+
+    div.historique p {
+        font-size: 0.8rem;
+    }
 }
 
 @media screen and (max-width: 600px) {
+    .colorMode {
+        transition: all 0.4s ease-in-out;
+    }
+
+    .colorMode.day:hover {
+        background-image: url("daymodeicon.png");
+    }
+
+    .colorMode.night:hover {
+        background-image: url("nightmodeicon.png");
+    }
+
+    .colorMode:hover {
+        width: 63px;
+    }
+
     .convertisseur {
         width: 90%;
     }
 
     .modification {
         width: 90%;
+    }
+
+    .selector {
+        margin-top: 0;
+        width: 180px;
+    }
+
+    .value {
+        width: 170px;
+    }
+
+    .alignRow {
+        margin-top: 50px;
+        height: 230px;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .swap {
+        margin: auto;
     }
 
     .divInter {
@@ -359,4 +502,29 @@ ul.historique li {
         margin-top: 0px;
     }
 
+    div.historique {
+        width: 100px;
+        top: -700px;
+        left: calc(100% - 100px + 16px);
+    }
+
+    div.historique p {
+        font-size: 1.1rem;
+    }
+
+    .footer {
+        width: 90%;
+    }
+
+    .footerText {
+        font-size: 1rem;
+    }
+
+    @media screen and (max-width: 450px) {
+        .title {
+            font-size: 1.9rem;
+        }
+
+
+    }
 }
