--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ body {
 }
 
 .colorMode {
-    background-image: url('/assets/daymodeicon.png');
+    background-image: url('assets/daymodeicon.png');
     background-size: cover;
     width: 63px;
     height: 70px;
@@ -60,19 +60,19 @@ body {
 }
 
 .colorMode.day {
-    background-image: url("/assets/daymodeicon.png");
+    background-image: url("assets/daymodeicon.png");
 }
 
 .colorMode.night {
-    background-image: url("/assets/nightmodeicon.png");
+    background-image: url("assets/nightmodeicon.png");
 }
 
 .colorMode.day:hover {
-    background-image: url("/assets/daymode.png");
+    background-image: url("assets/daymode.png");
 }
 
 .colorMode.night:hover {
-    background-image: url("/assets/nightmode.png");
+    background-image: url("assets/nightmode.png");
 }
 
 .menu {
@@ -112,7 +112,7 @@ body {
     height: 55px;
     margin-left: auto;
     margin-right: auto;
-    background-image: url('/assets/homeiconday.jpg');
+    background-image: url('assets/homeiconday.jpg');
     background-size: cover;
     transition: all 0.4s ease-in-out;
 }
@@ -195,7 +195,7 @@ option {
 .swap {
     width: 50px;
     height: 50px;
-    background-image: url('/assets/swapday.png');
+    background-image: url('assets/swapday.png');
     background-size: cover;
     margin-top: 80px;
     transition: all 0.4s ease-in-out;
@@ -482,11 +482,11 @@ ul.historique li {
     }
 
     .colorMode.day:hover {
-        background-image: url("/assets/daymodeicon.png");
+        background-image: url("assets/daymodeicon.png");
     }
 
     .colorMode.night:hover {
-        background-image: url("/assets/nightmodeicon.png");
+        background-image: url("assets/nightmodeicon.png");
     }
 
     .colorMode:hover {
